# pygrnwang

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  ak135.nd  create_qseis.py  create_qseis_bulk.py  create_qssp.py  create_qssp_bulk.py  create_spgrn.py  create_spgrn_bulk.py  focal_mechanism.py  geo.py  magnitude.py  others.py  plot_seismograms.py  pyproject.toml  qseis06.inp  qssp2020inp.py  read_green_info.py  read_qseis.py  read_qseis_by_fortran.py  read_qseis_raw.py  read_qssp.py  read_spgrn.py  read_spgrn_old.py  read_spgrn_stream.py  read_tpts_table.py  requirements.txt  setup.py  spgrn2020.inp  turkey.nd
.github/workflows/: publish.yml
fortran_src_codes/edcmp2.0_src/: edcgrn.f
fortran_src_codes/edcmp2.0_src/edcmp2/: edcmp2.dsp  edcmp2.dsw  edcmp2.opt  edcmp2.plg
fortran_src_codes/edgrn2.0_src/: edgglobal.h
fortran_src_codes/qseis06_src/: bessj.f  cdgemp.f  four1.f  qseis06.inp  qsfftinv.f  qsgetinp.f  qsglobal.h  qsmain.f  qsmultis.f  qssublay.f  qswavelet.f  qswaveno.f  qswvint.f  taper.f
fortran_src_codes/qseis2025_src/: Makefile  qsbsj.f  qsgetinp.f  qsglobal.h  qshksh.f  qskern.f  qsmain.f  qsmatrix0.f  qswvint.f
fortran_src_codes/qseis_stress_src/: Makefile  bessj0.f  bessj1.f  cmemcpy.f  getdata.f  qsam2ve.f  qsbsj.f  qsgetinp.f  qsglobal.h  qshksh.f  qslayer.f  qsmain.f  qsmultis.f  qspsv.f  qsqmodel.f  qssh.f  qssource.f  qsve2am.f  qswvint.f
fortran_src_codes/qssp2020_src/: qpalloc.f  qpalloc.mod  qpgetinp.f  qpgrnspec.f  qpmain.f  qpqmodel.f  qpsprop.f  qpspropg.f  qpwvint.f  qssp2020.inp  ruku.f  transfs2t.f
fortran_src_codes/spgrn2012_src/: legendre.f  qpalloc.f  qpbounds.f  qpdocu.f  qpfftinv.f  qpgetinp.f  qpglobal.h  qpgrnspec.f  qplegendre.f  qpmain.f  qppsvkern.f  qppsvkerng.f  qpqmodel.f  qpshkern.f  qpsmat.f  qpsmat0.f  qpsmatc.f  qpsprop.f  qpsprop0.f  qpsprop1.f  qpspropg.f  qpspropg0.f  qpspropg1.f  qpstart0.f  qpstart4.f  qpstart6.f  qpsublayer.f  qptmat.f  qptprop.f  qptprop1.f  qpwvint.f  wavelet.f
fortran_src_codes/spgrn2020_src/: cdsvd.f  legendre.f  qpalloc.f  qpalloc.mod  qpdifmat2.f  qpdifmat4.f  qpdifmat6.f  qpdocu.f  qpfftinv.f  qpgetinp.f  qpgrnspec.f  qplegendre.f  qpmain.f  qpmaxdeg.f  qppsvkern.f  qppsvkerng.f  qpshkern.f  qpsmat.f  qpsmat0.f  qpsmatc.f  qpsprop.f  qpsprop0.f  qpsprop1.f  qpspropg.f  qpspropg0.f  qpspropg1.f  qpstart0.f  qpstart6.f  qpsublayer.f  qptmat.f  qptprop.f  qptprop1.f  qpwvint.f  ruku.f  spbdphj.f  spbdphy.f  spbjh.f  spbphj.f  spbphy.f  spbpsj.f  (+5 more)
pygrnwang/: __init__.py  ak135fc.py  create_edcmp.py  create_edcmp_backup.py  create_edcmp_bulk.py  create_edcmp_bulk_bakcup.py  create_edgrn.py  create_edgrn_bulk.py  create_edgrn_edcmp_bulk.py  create_nd_by_crust1_ak135.py  create_qseis.py  create_qseis06.py  create_qseis06_bulk.py  create_qseis2025.py  create_qseis2025_bulk.py  create_qseis_bulk.py  create_qseis_stress.py  create_qseis_stress_bulk.py  create_qssp.py  create_qssp2020.py  create_qssp2020_bulk.py  create_qssp_bulk.py  create_spgrn.py  create_spgrn2012.py  create_spgrn2012_bulk.py  create_spgrn2020.py  create_spgrn2020_bulk.py  create_spgrn_bulk.py  crust1.py  edcmp2inp.py  edgrn2inp.py  focal_mechanism.py  geo.py  main.py  obspy_geo.py  obspy_taup.py  plot_seismograms.py  pytaup.py  qseis06inp.py  qseis2025inp.py  (+23 more)
qseis06_src/: qsgetinp.f  qsglobal.h
qssp2020_src/: qpalloc.f  qpgetinp.f  qpgrnspec.f  qpmain.f  qpqmodel.f  qpsprop.f  qpspropg.f  qpwvint.f  ruku.f
spgrn2020_src/: Makefile  Makefile.am  Makefile.in  cdsvd.f  legendre.f  qpalloc.f  qpdifmat2.f  qpdifmat4.f  qpdifmat6.f  qpdocu.f  qpfftinv.f  qpgetinp.f  qpgrnspec.f  qplegendre.f  qpmain.f  qpmaxdeg.f  qppsvkern.f  qppsvkerng.f  qpqmodel.f  qpshkern.f  qpsmat.f  qpsmat0.f  qpsmatc.f  qpsprop.f  qpsprop0.f  qpsprop1.f  qpspropg.f  qpspropg0.f  qpspropg1.f  qpstart0.f  qpstart4.f  qpstart6.f  qpsublayer.f  qptmat.f  qptprop.f  qptprop1.f  qpwvint.f  ruku.f  spbdphj.f  spbdphy.f  (+8 more)
