[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygrnwang"
version = "2.0.0"
description = "A Python library for computing Coulomb Failure Stress Change."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Zhou Jiangcheng", email = "zhoujcpku@outlook.com" }]
dependencies = [
    "numpy>=1.26.1",
    "matplotlib>=3.9.2",
    "scipy>=1.16.2",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "obspy>=1.4.2",
    "mpi4py>=3.1.4"
]

[project.scripts]
pygrnwang = "pygrnwang.main:main"
edgrn2 = "pygrnwang.wrappers:run_edgrn2"
edcmp2 = "pygrnwang.wrappers:run_edcmp2"
qssp2020 = "pygrnwang.wrappers:run_qssp2020"
spgrn2012 = "pygrnwang.wrappers:run_spgrn2012"
spgrn2020 = "pygrnwang.wrappers:run_spgrn2020"
qseis06 = "pygrnwang.wrappers:run_qseis06"
qseis2025 = "pygrnwang.wrappers:run_qseis2025"

[project.urls]
Homepage = "https://github.com/Zhou-Jiangcheng/pygrnwang"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pygrnwang*"]
exclude = ["test*"]

[tool.setuptools.package-data]
pygrnwang = ["exec/"]
