bin_PROGRAMS = spgrn2020
spgrn2020_SOURCES = banddpasss.f butterworth.f \
caxcb.f cdsvd.f cmemcpy.f disazi.f four1w.f legendre.f \
qpalloc.f qpdifmat2.f qpdifmat4.f qpdifmat6.f qpdocu.f qpfftinv.f qpgetinp.f qpgrnspec.f \
qplegendre.f qpmain.f qpmaxdeg.f qppsvkern.f qppsvkerng.f qpqmodel.f qpshkern.f qpsmat0.f \
qpsmatc.f qpsmat.f qpsprop0.f qpsprop1.f qpsprop.f qpspropg0.f qpspropg1.f qpspropg.f \
qpstart0.f qpstart4.f qpstart6.f qpsublayer.f qptmat.f qptprop1.f qptprop.f qpwvint.f \
ruku.f skipdoc.f spbdphj.f spbdphy.f spbjh.f spbphj.f spbphy.f \
spbpsj.f spbpsy.f swavelet.f taper.f tpssub.f
clean-local:
	-rm -f *.mod
